--- a/index.html
+++ b/index.html
@@ -6,34 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vedran Blazenka - Software Developer</title>
 
-    <style>
-        html, body {
-            font-family: -apple-system, BlinkMacSystemFont,
-            "Segoe UI", "Roboto", "Oxygen",
-            "Ubuntu", "Cantarell", "Fira Sans",
-            "Droid Sans", "Helvetica Neue", sans-serif;
-        }
-
-        .bio {
-            line-height: 1;
-            margin-bottom: 4rem;
-        }
-    </style>
+    <link rel="stylesheet" href="src/styles/styles.css">  
 </head>
 <body>
+    <div class="container">
     <h1>Hi 👋 , I'm Vedran!</h1>
     <div class="bio">
         <p>👨‍💻 Software developer with broad range of interests</p>
         <p>👉 people, management/leadership, products, ux</p>
         <p>✌️ Always be learning!</p>
     </div>
-
+    
     <section>
-        <h1>Writing ✍️</h1>
+        <h2>✍️ Writings</h2>
 
-        <article>
-            <h1><a href="https://github.com/vblazenka/vedran.co/blob/master/posts/being-a-part-of-community.md">Being a part of community</a></h1>
-        </article>
+        <ul>
+            <li>
+                <a href="./blog/being-a-part-of-community.html">Being a part of community</a>
+            </li>
+        </ul>
     </section>
+</div>
 </body>
 </html>
