chore: update bio

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -15,7 +15,7 @@
         <h1>Hi 👋 , I'm Vedran!</h1>
         <div class="bio">
             <p>👨‍💻 Software developer with broad range of interests</p>
-            <p>👉 people, management/leadership, products, ux</p>
+            <p>👉 computer science, math, people, products, ux</p>
             <p>✌️ Always be learning!</p>
         </div>
     </header>
