feat: add footer

--- a/index.html
+++ b/index.html
@@ -39,17 +39,21 @@
             </div>
 
             <div class="content__column social">
-                <>Social</h2>
-                    <ul>
-                        <li><a href="https://github.com/vblazenka" target="_blank">GitHub</a></li>
-                        <li><a href="https://www.linkedin.com/in/vblazenka/" target="_blank">LinkedIn</a></li>
-                        <li><a href="https://dribbble.com/vedranco" target="_blank">Dribbble</a></li>
-                    </ul>
+                <h2>Social</h2>
+                <ul>
+                    <li><a href="https://github.com/vblazenka" target="_blank">GitHub</a></li>
+                    <li><a href="https://www.linkedin.com/in/vblazenka/" target="_blank">LinkedIn</a></li>
+                    <li><a href="https://dribbble.com/vedranco" target="_blank">Dribbble</a></li>
+                </ul>
             </div>
 
 
         </div>
     </main>
+
+    <footer>
+        <p>© 2023 Vedran Blaženka</p>
+    </footer>
 </body>
 
 </html>
