feat: add analytics

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=block" rel="stylesheet">
 
     <link rel="stylesheet" href="src/styles/styles.css">
+
+    <script data-goatcounter="https://vedranco.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </head>
 
 <body class="home">
