chore: update year in the footer to 2024

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -17,7 +17,7 @@
 
 <body class="home">
 
-    <h1 class="home__title">SOFTWARE DEVELOPER WITH BROAD RANGE OF INTERESTS </h1>
+    <h1 class="home__title">SOFTWARE DESIGNER</h1>
 
     <main>
 
@@ -52,7 +52,7 @@
     </main>
 
     <footer>
-        <p>© 2023 Vedran Blaženka</p>
+        <p>© 2024 Vedran Blaženka</p>
     </footer>
 </body>
 
