chore: update title

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -17,7 +17,7 @@
 
 <body class="home">
 
-    <h1 class="home__title">SOFTWARE DESIGNER</h1>
+    <h1 class="home__title">SOFTWARE DEVELOPER / DESIGNER</h1>
 
     <main>
 
